Refactored sphinx docs with new SwaggerUI
